tests/marouter/errors/format/o/o_false/errors.marouter
Error: Not numeric vehicle number in line '1          2          a'.
Quitting (on error).
